--- a/list-app/app/views/layouts/application.html.erb
+++ b/list-app/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+  	<header><h1>Erin's Sublime List App</h1></header>
     <%= yield %>
+	<%= render 'layouts/sidebar' %>
+    <footer><p>Erin's Sublime List App was made with the knowledge she has acquired from her Building Web Applications class. Thanks for coming!</p></footer>
   </body>
 </html>
