--- a/list-app/app/assets/stylesheets/application.css
+++ b/list-app/app/assets/stylesheets/application.css
@@ -13,3 +13,9 @@
  *= require_tree .
  *= require_self
  */
+#sidebar{
+	float: right;
+	width: 33%;
+	padding: 5px;
+	background-color: #F5F5DC;
+}
