--- a/list-app/app/views/tasks/edit.html.erb
+++ b/list-app/app/views/tasks/edit.html.erb
@@ -1,12 +1,6 @@
 <h1>Editing Task</h1>
 
-<!--%= render 'form', task: @task %-->
-<form>
-	<select name="mytask">
-		<% @task.each do | t | %>
-		<option><%= t.title %></option>
-	</select>
-</form>
+<%= render 'form', task: @task %>
 
-<%= link_to 'Show', @task %> |
+<%= link_to 'Show', @task %> 
 <%= link_to 'Back', tasks_path %>
