--- a/list-app/app/views/tasks/index.html.erb
+++ b/list-app/app/views/tasks/index.html.erb
@@ -2,6 +2,7 @@
 
 <h1>Tasks</h1>
 
+<h2>Pending Tasks</h2>
 <table>
   <thead>
     <tr>
@@ -9,14 +10,14 @@
       <th>Description</th>
       <th>Priority</th>
       <th>Duedate</th>
-      <th>Iscompleted</th>
+      <th>Is Completed?</th>
       <th>Tasklist</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @tasks.each do |task| %>
+    <% @tasks.pending.each do |task| %>
       <tr>
         <td><%= task.title %></td>
         <td><%= task.description %></td>
@@ -27,6 +28,36 @@
         <td><%= link_to 'Show', task %></td>
         <td><%= link_to 'Edit', edit_task_path(task) %></td>
         <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<table>
+  <thread>
+    <tr>
+      <th>Title</th>
+      <th>Description</th>
+      <th>Priority</th>
+      <th>Duedate</th>
+      <th>Is Completed?</th>
+      <th>Tasklist</th>
+      <th colspan="3"></th>
+    </tr>
+  </thread>
+
+  <tbody>
+    <% @tasks.completed.first(5).each do | task | %>
+      <tr>
+        <td><%= task.title %></td>
+        <td><%= task.description %></td>
+        <td><%= task.priority %></td>
+        <td><%= task.duedate %></td>
+        <td><%= task.iscompleted %></td>
+        <td><%= task.TaskList %></td>
+        <td><%= link_to 'Show', task %></td>
+        <td><%= link_to 'Edit', edit_task_path(task) %></td>
+        <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td> 
       </tr>
     <% end %>
   </tbody>
