--- a/list-app/app/views/layouts/application.html.erb
+++ b/list-app/app/views/layouts/application.html.erb
@@ -10,7 +10,12 @@
 
   <body>
   	<header><h1>Erin's Sublime List App</h1></header>
+    <div id = "primary">
+      <% if flash[:message] %>
+        <p class="flash-message"><%= flash[:message] %> </p>
+      <% end %>
     <%= yield %>
+    </div>
 	<%= render 'layouts/sidebar' %>
     <footer><p>Erin's Sublime List App was made with the knowledge she has acquired from her Building Web Applications class. Thanks for coming!</p></footer>
   </body>
