--- a/list-app/app/views/tasks/_form.html.erb
+++ b/list-app/app/views/tasks/_form.html.erb
@@ -42,6 +42,11 @@
     <%= f.collection_select :TaskList_id, TaskList.all, :id, :name, prompt: true %>
   </div>
 
+  <div class="field">
+    <%= f.label :user_id %><br>
+    <%= f.collection_select :user_id, User.all, :id, :username, prompt: "No users assigned" %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
